[gd_scene load_steps=20 format=2]

[ext_resource path="res://PixelArt/Structures/FlyingObelisk_no_lightnings_no_letter.png" type="Texture" id=1]
[ext_resource path="res://Enemies/BossSpawner.gd" type="Script" id=2]
[ext_resource path="res://Enemies/StingFlyBoss.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 200, 400 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 200, 400 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 200, 400 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 200, 400 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 800, 0, 200, 400 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 1000, 0, 200, 400 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 1200, 0, 200, 400 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 1 )
region = Rect2( 1400, 0, 200, 400 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 1 )
region = Rect2( 1600, 0, 200, 400 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 1 )
region = Rect2( 1800, 0, 200, 400 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 1 )
region = Rect2( 2000, 0, 200, 400 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 1 )
region = Rect2( 2200, 0, 200, 400 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 1 )
region = Rect2( 2400, 0, 200, 400 )

[sub_resource type="SpriteFrames" id=67]
animations = [ {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=68]
radius = 7.84445
height = 0.0

[sub_resource type="CircleShape2D" id=69]
radius = 17.7512

[node name="BossSpawner" type="StaticBody2D"]
script = ExtResource( 2 )
BossScene = ExtResource( 3 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 67 )
playing = true
offset = Vector2( 0.0905762, -179.422 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8.02293 )
shape = SubResource( 68 )

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 69 )

[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_InteractionArea_body_exited"]
